--- a/movies/index.html
+++ b/movies/index.html
@@ -66,12 +66,15 @@ you would use Cypher to query the Neo4j Database.</p>
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->Match (m:Movie) where m.released &gt; 2000 RETURN m limit 5<!--/code--></pre>
 </div>
 </div>
+<div style="background: #5CA6D9EE; padding: 12px; color: white; border-radius: 2px">
+Hint: You can click on the query above to populate it in the editor.
+</div>
 <div class="paragraph">
 <p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'><strong>Expected Result</strong>: The above query will return all the movies that were realesed after the year 2000 limiting the result to 5 items.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="http://guides.neo4j.com/sandbox/movies/img/5-movies.svg" alt="5 movies" width="100%">
+<img src="http://localhost:8001//img/5-movies.svg" alt="5 movies" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -81,25 +84,21 @@ you would use Cypher to query the Neo4j Database.</p>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Write a query to retrieve all the movies released after the year 2005.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->Match (m:Movie) where m.released &gt; 2005 RETURN m<!--/code--></pre>
 </div>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
+</li>
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Write a query to return the count of movies released after the year 2005. (Hint: you can use the <code>count(m)</code> function to return the count)</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->Match (m:Movie) where m.released &gt; 2005 RETURN count(m)<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -125,7 +124,7 @@ parenthesis — like <code>(p:Person)</code> where <code>p</code> is a variable 
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="http://guides.neo4j.com/sandbox/movies/img/schema.svg" alt="schema" width="100%">
+<img src="http://localhost:8001//img/schema.svg" alt="schema" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -147,12 +146,15 @@ the type of relationship it is referring to.</p>
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[d:DIRECTED]-(m:Movie) where m.released &gt; 2010 RETURN p,d,m<!--/code--></pre>
 </div>
 </div>
+<div style="background: #5CA6D9EE; padding: 12px; color: white; border-radius: 2px">
+Hint: You can click on the query above to populate it in the editor.
+</div>
 <div class="paragraph">
 <p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'><strong>Expected Result</strong>: The above query will return all Person nodes who directed a movie that was released after 2010.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="http://guides.neo4j.com/sandbox/movies/img/movies-after-2010.svg" alt="movies after 2010" width="100%">
+<img src="http://localhost:8001//img/movies-after-2010.svg" alt="movies after 2010" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -162,13 +164,13 @@ the type of relationship it is referring to.</p>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Query to get all the people who acted in a movie that was released after 2010.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[d:ACTED_IN]-(m:Movie) where m.released &gt; 2010 RETURN p,d,m<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -186,7 +188,7 @@ the type of relationship it is referring to.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="http://guides.neo4j.com/sandbox/movies/img/schema.svg" alt="schema" width="100%">
+<img src="http://localhost:8001//img/schema.svg" alt="schema" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -235,7 +237,7 @@ the type of relationship it is referring to.</p>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="http://guides.neo4j.com/sandbox/movies/img/movies-properties.jpg" alt="movies properties" width="100%">
+<img src="http://localhost:8001//img/movies-properties.jpg" alt="movies properties" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -248,13 +250,13 @@ the type of relationship it is referring to.</p>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Wrtie a query to get <code>name</code> and <code>born</code> properties of the Person node.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person) return p.name, p.born<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -285,13 +287,13 @@ the type of relationship it is referring to.</p>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Create a new <code>Person</code> node with a property <code>name</code> having the value of your name.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->Create (p:Person {name: '&lt;Your Name&gt;'}) RETURN p<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -339,25 +341,21 @@ the type of relationship it is referring to.</p>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Find the movie with title "Cloud Atlas"</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (m:Movie {title: "Cloud Atlas"}) return m<!--/code--></pre>
 </div>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
+</li>
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Get all the movies that were released between 2010 and 2015.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
-<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (m:Movies) where m.released &gt; 2010 and m.released &lt; 2015 RETURN m<!--/code--></pre>
+<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (m:Movie) where m.released &gt; 2010 and m.released &lt; 2015 RETURN m<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -404,16 +402,16 @@ Return p<!--/code--></pre>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Write a query using Merge to create a movie node with title "Greyhound". If the node does not exist then set its <code>released</code> property to 2020 and <code>lastUpdatedAt</code> property to the current time stamp. If the node already exists, then only set <code>lastUpdatedAt</code> to the current time stamp. Return the movie node.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cyper" lang="cyper"><!--code class="cyper language-cyper"-->MERGE (m:movie {title: 'Greyhound'})
-ON MATCH SET p.createdAt = timestamp()
-ON CREATE SET released = "2020" and p.lastLoggedInAt = timestamp()
+ON MATCH SET m.lastUpdatedAt = timestamp()
+ON CREATE SET released = "2020" and m.lastUpdatedAt = timestamp()
 Return m<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -447,16 +445,16 @@ RETURN type(w)<!--/code--></pre>
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Create a relationship <code>:WATCHED</code> between the node you created for yourself previously in step 6 and the movie <strong>Cloud Atlas</strong> and then return the type of created relationship</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person), (m:Movie)
-WHERE p.name = "&lt;Your Name&gt;" and m.name = "Cloud Atlas"
+WHERE p.name = "&lt;Your Name&gt;" and m.title = "Cloud Atlas"
 CREATE (p)-[w:WATCHED]-&gt;(m)
 RETURN type(w)<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -474,7 +472,7 @@ RETURN type(w)<!--/code--></pre>
 </div>
 <div class="imageblock">
 <div class="content">
-<img src="http://guides.neo4j.com/sandbox/movies/img/relationship-types.svg" alt="relationship types" width="400">
+<img src="http://localhost:8001//img/relationship-types.svg" alt="relationship types" width="400">
 </div>
 </div>
 <div class="paragraph">
@@ -491,7 +489,7 @@ RETURN type(w)<!--/code--></pre>
 </div>
 <div class="listingblock">
 <div class="content">
-<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[:ACTED_IN]-&gt;(m:Movie)<!--/code--></pre>
+<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[r:ACTED_IN]-&gt;(m:Movie) RETURN p,r,m<!--/code--></pre>
 </div>
 </div>
 <div class="paragraph">
@@ -503,20 +501,26 @@ even without denoting the direction in the query, it will return the same result
 </div>
 <div class="listingblock">
 <div class="content">
-<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[:ACTED_IN]-[m:Movie]<!--/code--></pre>
+<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[:ACTED_IN]-(m:Movie) RETURN p,r,m<!--/code--></pre>
 </div>
 </div>
 <div class="paragraph">
 <p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'>will return the same reuslt as the above one.</p>
 </div>
 <div class="paragraph">
-<p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'><strong>Try</strong>
-1. Write a query to find the nodes <code>Person</code> and <code>Movie</code> which are connected by <code>REVIEWED</code> relationship and is outgoing from the <code>Person</code> node and incoming to the <code>Movie</code> node.</p>
+<p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'><strong>Try</strong></p>
 </div>
+<div class="olist arabic">
+<ol class="arabic">
+<li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
+<p>Write a query to find the nodes <code>Person</code> and <code>Movie</code> which are connected by <code>REVIEWED</code> relationship and is outgoing from the <code>Person</code> node and incoming to the <code>Movie</code> node.</p>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cyper" lang="cyper"><!--code class="cyper language-cyper"-->MATCH (p:Person)-[r:REVIEWED]-(m:Movie) return p,r,m<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 	</div>
   </div>
@@ -536,52 +540,40 @@ even without denoting the direction in the query, it will return the same result
 <ol class="arabic">
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p><strong>Finding who directed Cloud Atlas movie</strong></p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
-<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (m:Movie {title: 'Cloud Atlas'})&lt;-[d:DIRECTED]-(p:Persom) return p.name<!--/code--></pre>
+<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (m:Movie {title: 'Cloud Atlas'})&lt;-[d:DIRECTED]-(p:Person) return p.name<!--/code--></pre>
 </div>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
+</li>
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p><strong>Finding all people who have co-acted with Tom Hanks in any movie</strong></p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (tom:Person {name: "Tom Hanks"})-[:ACTED_IN]-&gt;(:Movie)&lt;-[:ACTED_IN]-(p:Person) return p.name<!--/code--></pre>
 </div>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
+</li>
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p><strong>Finding all people related to the movie Cloud Atlas in any way</strong></p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
-<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[relatedTo]-(m:Movie {title: "Cloud Atlas"}) return people.name, type(relatedTo)<!--/code--></pre>
+<pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person)-[relatedTo]-(m:Movie {title: "Cloud Atlas"}) return p.name, type(relatedTo)<!--/code--></pre>
 </div>
 </div>
 <div class="paragraph">
 <p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'>In the above query we only used the variable <code>relatedTo</code> which will try to find all the relationships between any <code>Person</code> node and the movie node "Cloud Atlas"</p>
 </div>
-<div class="olist arabic">
-<ol class="arabic">
+</li>
 <li style='margin-bottom: 12px; font-size: 16px; line-height: 28px;'>
 <p>Finding Movies and Actors that are 3 hops away from Kevin Bacon.</p>
-</li>
-</ol>
-</div>
 <div class="listingblock">
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MATCH (p:Person {name: 'Kevin Bacon'})-[*1..3]-(hollywood) return DISTINCT p, hollywood<!--/code--></pre>
 </div>
+</div>
+</li>
+</ol>
 </div>
 <div class="paragraph">
 <p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'>Note: in the above query, <code>hollywood</code> refers to any node in the database (in this case <code>Person</code> and <code>Movie</code> nodes)</p>
