--- a/movies/index.html
+++ b/movies/index.html
@@ -74,7 +74,7 @@ Hint: You can click on the query above to populate it in the editor.
 </div>
 <div class="imageblock">
 <div class="content">
-<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://localhost:8001//img/5-movies.svg" alt="5 movies" width="100%">
+<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://guides.neo4j.com/sandbox/movies/img/5-movies.svg" alt="5 movies" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -124,7 +124,7 @@ parenthesis — like <code>(p:Person)</code> where <code>p</code> is a variable 
 </div>
 <div class="imageblock">
 <div class="content">
-<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://localhost:8001//img/schema.svg" alt="schema" width="100%">
+<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://guides.neo4j.com/sandbox/movies/img/schema.svg" alt="schema" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -154,7 +154,7 @@ Hint: You can click on the query above to populate it in the editor.
 </div>
 <div class="imageblock">
 <div class="content">
-<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://localhost:8001//img/movies-after-2010.svg" alt="movies after 2010" width="100%">
+<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://guides.neo4j.com/sandbox/movies/img/movies-after-2010.svg" alt="movies after 2010" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -188,7 +188,7 @@ Hint: You can click on the query above to populate it in the editor.
 </div>
 <div class="imageblock">
 <div class="content">
-<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://localhost:8001//img/schema.svg" alt="schema" width="100%">
+<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://guides.neo4j.com/sandbox/movies/img/schema.svg" alt="schema" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -237,7 +237,7 @@ Hint: You can click on the query above to populate it in the editor.
 </div>
 <div class="imageblock">
 <div class="content">
-<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://localhost:8001//img/movies-properties.jpg" alt="movies properties" width="100%">
+<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://guides.neo4j.com/sandbox/movies/img/movies-properties.jpg" alt="movies properties" width="100%">
 </div>
 </div>
 <div class="paragraph">
@@ -406,7 +406,7 @@ Return p<!--/code--></pre>
 <div class="content">
 <pre mode="cypher"  class="highlight pre-scrollable programlisting cm-s-neo code runnable standalone-example ng-binding" data-lang="cypher" lang="cypher"><!--code class="cypher language-cypher"-->MERGE (m:movie {title: 'Greyhound'})
 ON MATCH SET m.lastUpdatedAt = timestamp()
-ON CREATE SET released = "2020" and m.lastUpdatedAt = timestamp()
+ON CREATE SET m.released = "2020" and m.lastUpdatedAt = timestamp()
 Return m<!--/code--></pre>
 </div>
 </div>
@@ -472,7 +472,7 @@ RETURN type(w)<!--/code--></pre>
 </div>
 <div class="imageblock">
 <div class="content">
-<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://localhost:8001//img/relationship-types.svg" alt="relationship types" width="400">
+<img style="background: #fff; padding: 12px; margin-bottom: 24px;" src="http://guides.neo4j.com/sandbox/movies/img/relationship-types.svg" alt="relationship types" width="400">
 </div>
 </div>
 <div class="paragraph">
