--- a/movies/html/sandbox_index.html
+++ b/movies/html/sandbox_index.html
@@ -461,7 +461,7 @@ RETURN type(w)<!--/code--></pre>
 </div>
 </div>
 <div class="paragraph">
-<p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'>In the above picture, the Tom Hanks node is said to have an outgoing relationship while Forrest Gump node is said to have an incoming relationship.</p>
+<p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'>In the above picture, the Tom Hanks node is said to have an outgoing relationship while Cloud Atlas node is said to have an incoming relationship.</p>
 </div>
 <div class="paragraph">
 <p style='margin-top: 12px; margin-bottom: 24px; font-size: 16px; line-height: 28px;'>Relationships always have a direction. However, you only have to pay attention to the direction where it is useful.</p>
